@@ -274,6 +274,11 @@ DESCRIPTION
         Using this function has the advantage that its output ends up in the
         correct place, e.g. on stderr of the connecting urxvtc client.
 
+    $is_safe = urxvt::safe
+        Returns true when it is safe to do potentially unsafe things, such
+        as evaluating perl code specified by the user. This is true when
+        urxvt was started setuid or setgid.
+
     $time = urxvt::NOW
         Returns the "current time" (as per the event loop).
 
@@ -601,7 +606,7 @@ DESCRIPTION
         "$term->ROW_t" for details.
 
     $success = $term->grab_button ($button, $modifiermask)
-        Registers a synchronous button grab. See XGrabButton.
+        Registers a synchronous button grab. See the XGrabButton manpage.
 
     $success = $term->grab ($eventtime[, $sync])
         Calls XGrabPointer and XGrabKeyboard in asynchronous (default) or
